<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/feedback_alertTitle_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/Feedback"
            android:fontFamily="serif-monospace"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/shape_footer_tv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/shape_footer_layout">


            <EditText
                android:id="@+id/feedback_etxt_Email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:background="@drawable/shape_footer_layout"
                android:drawablePadding="5dp"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@null"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:fontFamily="serif-monospace"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:hint="@string/Email"
                android:textColorHint="@color/Transparent_white" />


            <EditText
                android:id="@+id/feedback_etxt_Feedback_id"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_feedback_write"
                android:background="@drawable/shape_footer_layout"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:clickable="true"
                android:cursorVisible="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textCursorDrawable="@null"
                android:textIsSelectable="false"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:scrollbars="vertical"
                android:fadeScrollbars="true"
                android:scrollbarThumbVertical="@color/Transparent_white"
                android:scrollbarSize="3dp"
                android:maxLines="10"
                android:hint="@string/Feedback_Hint"
                android:inputType="textMultiLine|textAutoCorrect|textAutoComplete|textCapSentences"
                android:imeOptions="actionSend"
                android:fontFamily="serif-monospace"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColorHint="@color/Transparent_white" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:gravity="center">


                <Button
                    android:id="@+id/cancel_feedback_btn_id"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_footer_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif-monospace"
                    android:textAllCaps="false"
                    android:text="@string/Cancel"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/clear_feedback_btn_id"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/shape_footer_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif-monospace"
                    android:textAllCaps="false"
                    android:text="@string/Clear"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/send_feedback_btn_id"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_footer_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif-monospace"
                    android:textAllCaps="false"
                    android:text="@string/Send"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>