<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/history_alertTitle_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/History"
            android:fontFamily="serif-monospace"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/shape_footer_tv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/shape_footer_layout">

            <EditText
                android:id="@+id/history_etxt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:maxHeight="300dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:clickable="false"
                android:cursorVisible="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textIsSelectable="false"
                android:ellipsize="end"
                android:scrollbars="vertical"
                android:fadeScrollbars="true"
                android:scrollbarThumbVertical="@color/Transparent_white"
                android:scrollbarSize="3dp"
                android:inputType="textMultiLine"
                android:fontFamily="serif-monospace"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:gravity="center">

                <Button
                    android:id="@+id/cancel_history_btn_id"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_cancel"
                    android:padding="5dp"
                    android:background="@drawable/shape_footer_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif-monospace"
                    android:textAllCaps="false"
                    android:text="@string/Cancel"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/clear_history_btn_id"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/ic_clear"
                    android:padding="5dp"
                    android:background="@drawable/shape_footer_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif-monospace"
                    android:textAllCaps="false"
                    android:text="@string/Clear"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>