<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheet_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Color_DarkGray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="26dp">


    <!-- Button -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/mainBackground_ColorGray">

        <!-- Border -->
        <LinearLayout
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/bg_footer_two"/>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/bg_footer_one"/>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bottom_sheet"
            android:gravity="center"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />


        <!-- Border -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/bg_footer_two"/>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@drawable/bg_footer_one"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!-- Footer Item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/drawer_Vibrate_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_footer_one">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:drawableStart="@drawable/ic_vibration"
                    android:drawablePadding="10dp"
                    android:text="@string/Vibration"
                    android:padding="5dp"
                    android:fontFamily="serif-monospace"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <Switch
                    android:id="@+id/drawer_Vibrate_switch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@android:color/transparent">

            <TextView
                android:id="@+id/drawer_history_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_footer_two"
                android:drawableStart="@drawable/ic_history"
                android:drawablePadding="10dp"
                android:text="@string/History"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/color_white"
                android:fontFamily="serif-monospace"
                android:textSize="20sp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@android:color/transparent">

            <TextView
                android:id="@+id/drawer_feedback_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_footer_one"
                android:drawableStart="@drawable/ic_feedback"
                android:drawablePadding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Feedback"
                android:textColor="@color/color_white"
                android:fontFamily="serif-monospace"
                android:textSize="20sp"/>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@android:color/transparent">

            <TextView
                android:id="@+id/drawer_Share_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_footer_two"
                android:drawableStart="@drawable/ic_share"
                android:drawablePadding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Share"
                android:textColor="@color/color_white"
                android:fontFamily="serif-monospace"
                android:textSize="20sp"/>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <!-- Border -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/bg_footer_one"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/bg_footer_two"/>

    </LinearLayout>


</LinearLayout>